--- a/.env
+++ b/.env
@@ -10,11 +10,11 @@ DESTINATION=-1001943662738
 ###########################
 
 # Your app_id and api_hash obtained from my.telegram.org/apps
-API_ID=29890897
-API_HASH=41c0bae64c9f702f6740a0b9121f08f9
+API_ID=
+API_HASH=
 
 # Your user phone number
-PHONE=+33 7 56 97 05 71
+PHONE=
 
 # An arbitrary key for app datebase
 DB_PASSWORD=verysecretpassword
